0026832: TFunction_Iterator won't work if ExecutionStatus is Standard_False. The method TFunction_Iterator::More() is corrected().